--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ InputDir = output/
 OutputDir = output/
 EbsynthDir = ebsynth/
 # set this to the full path of where you have ebsynth installed. "C:\blablabla\ebsynth\EbSynth.exe" for example
-EbsynthExe = C:\Users\Admin\Downloads\EbSynth-Beta-Win\EbSynth.exe
+EbsynthExe = 
 # set this to how many files can fit in your ebsynth window so you can still click Run-All
 MaxEbsynthFiles = 20
 # set this to no if you want to disable ebsynth automation (the script clicks run all automatically)
